fix(llm): @MapperScan 加 annotationClass=Mapper.class 修复 bean 冲突 + PMD 清理 + 测试修复 + 文档同步
根因: LlmApplication @MapperScan 扫描 rag.legacy 包未限制 annotationClass,
MyBatis 将无注解接口 MemoryKVStore/VectorStoreLegacy/UserFactMemory 误注册为
Mapper bean, 与 @Component 的 RedisMemoryKVStore 冲突导致 prod 启动失败
(found 2: redisMemoryKVStore, memoryKVStore)

修复: @MapperScan(annotationClass=Mapper.class) 仅扫描带 @Mapper 注解的接口
验证: chat-llm 双实例 9095/9096 health UP, gRPC 9195/9196 正常监听

附带改动:
- PMD 违规清理 107→0 (catch 拆分避免 instanceof / 删未用 import / @SuppressWarnings)
- chat-web 测试修复: SecurityContext 注入 + JWT 集成测试 (18 个 401 修复)
- DebateTreeProcessorTest 删除已迁移方法引用
- 文档: CHANGELOG/故障排查指南/ADR-024/STANDALONE 同步更新